--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+        <div class="desktop-only">
+        <div>
+            <h1>Desktop Experience Only</h1>
+            <p>This website is designed for large screens.</p>
+            <p>Please open it on a laptop or desktop.</p>
+        </div>
+    </div>
+
     <div id="cursor-follower">
         <div class="cursor-text">AI</div>
         <div class="cursor-ring"></div>
@@ -132,5 +140,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
